--- a/src/components/ShopItem/ShopItem.module.scss
+++ b/src/components/ShopItem/ShopItem.module.scss
@@ -52,12 +52,18 @@
 
 .itemName {
   margin: 6px 30px 0px 30px;
+  height: 48px;
   font-size: 17px;
   color: var(--dark);
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  @media screen and (max-width: 992px) {
+    height: 42px;
+
+}
+ 
 }
 
 .itemPrice {
@@ -161,15 +167,18 @@
   object-fit: fill;
   background-color: #f4f4f4;
   width: 289px;
-  // height: 228px;
+  height: 228px;
   @media screen and (max-width: 992px) {
     width: 229px;
-  }
+    height: 180px;
+}
   @media screen and (max-width: 576px) {
     width: 280px;
+    height: 228px;
   }
   img {
     max-width: 100%;
+    object-fit: cover;
   }
 }
 
