--- a/src/components/UI/containers/ItemsContainer/ItemsContainer.module.scss
+++ b/src/components/UI/containers/ItemsContainer/ItemsContainer.module.scss
@@ -5,3 +5,32 @@
     justify-content: center;
     margin-top: 34px;
 }
+
+.container_loading {
+    width: 100%;
+    height: 400px;
+    position: relative;
+}
+
+.container__loader {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid var(--orange);
+    border-right: 0;
+    animation: loading 1s infinite;
+    top: 50px;
+    left: calc(50% - 25px);
+}
+
+
+@keyframes loading {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
