--- a/src/pages/ItemPage/ItemPage.module.scss
+++ b/src/pages/ItemPage/ItemPage.module.scss
@@ -38,7 +38,7 @@
 }
 
 .descriptionContainer {
-  max-width: 515px;
+  margin-top: 40px;
 }
 
 .descriptionBlock {
@@ -80,6 +80,13 @@
     top: 50px;
     left: calc(50% - 25px);
   }
+}
+
+.error {
+  font-size: 30px;
+  text-align: center;
+  height: 600px;
+  font-weight: medium;
 }
 
 @keyframes loading {
