--- a/src/pages/ItemPage/components/containerImagesProduct/container.module.scss
+++ b/src/pages/ItemPage/components/containerImagesProduct/container.module.scss
@@ -1,32 +1,26 @@
-.containerImages {
-}
-
-.desktopContainer {
+.container {
   height: 100%;
-  display: flex;
-  @media (max-width: 992px) {
-    display: none;
-  }
-}
-
-.radioConrainer {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.currentImage {
-  position: relative;
   width: 470px;
-  height: 100%;
-  margin-left: 20px;
-  background-color: #f5f5f5;
-  display: flex;
-  align-items: center;
+  flex-shrink: 0;
+  @media (max-width: 992px) {
+    max-width: 394px;
+    width: 100%;
+    padding: 0 15px;
+ }
+
+  @media (max-width: 766px) {
+    margin: 0 auto;
+    flex-shrink: 1;
+ }
 }
+
+.container__body {
+  background-color: #f5f5f5;
+  position: relative;
+}
+
 .image {
-  width: 100%;
+  max-width: 100%;
 }
 
 .favorite {
