--- a/src/components/UI/containers/ItemsContainer/ItemsContainer.module.scss
+++ b/src/components/UI/containers/ItemsContainer/ItemsContainer.module.scss
@@ -24,6 +24,14 @@
     left: calc(50% - 25px);
 }
 
+.container__empty {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 50px;
+  color: var(--dark);
+  font-weight: bold;
+}
+
 
 @keyframes loading {
     0% {
