Авторизация  + исправлены ссылки

--- a/src/components/headerAndNavbar/Header/Account/Account.module.scss
+++ b/src/components/headerAndNavbar/Header/Account/Account.module.scss
@@ -41,6 +41,12 @@
   margin-left: 0px;
   position: relative;
 }
+
+.account__auth {
+  color: var(--white);
+  
+}
+
 @media (min-width: 992px) {
   .iconBtn:hover {
     path {
