--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -27,6 +27,11 @@
   margin-left: 20px;
 }
 
+.message {
+  font-size: 17px;
+  
+}
+
 .discountContainer {
   font-size: 25px;
   color: var(--dark);
