выход из аккаунта

--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -10,6 +10,10 @@
   @media (max-width: 576px) {
     margin: 20px auto 200px auto;
     padding: 0;
+
+    .profile__exit {
+      margin-left: 20px;
+    }
   }
 }
 
