--- a/src/components/ordering/Ordering.module.scss
+++ b/src/components/ordering/Ordering.module.scss
@@ -94,7 +94,10 @@
   margin-top: 20px;
   justify-content: center;
 }
-
+.order__msg {
+  margin-top: 5px;
+  text-align: center;
+}
 .link {
   color: var(--orange);
   text-decoration-line: underline;
